# cartesi-coprocessor-operator

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-bake.hcl  docker-compose.yaml  entrypoint.sh
.github/workflows/: depot.yml  depot_prod.yml  depot_test.yml  docker-bake.hcl  docker-bake.override.hcl  rustfmt.yml
requests-test/: Cargo.toml
requests-test/src/: main.rs
setup-operator/: Cargo.toml
setup-operator/src/: lib.rs  main.rs
signer-eigen/: Cargo.toml
signer-eigen/src/: lib.rs
src/: classic_request_handling.rs  espresso_transaction.rs  main.rs
