[package]
name = "cartesi-coprocessor-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
advance_runner = {git = "https://github.com/zippiehq/cartesi-advance-runner", rev = "70780ca3fb56f534d9eac8b64269e44599d1eb93"}
hyper = { version = "0.14", features = ["full"] }
hex = "0.4"
serde_json = "1.0.132"
regex = "1.11.0"
signer-eigen = { path = "signer-eigen", optional = true }
rs-car-ipfs = { git = "https://github.com/zippiehq/rs-car-ipfs", rev = "2d893af9c9ab9aefe0e329bea4e8045b7f3015d7" }
ipfs-api-backend-hyper = { version = "0.6.0", features = ["with-send-sync"], default-features = false }
futures = "0.3"
cid = "0.8.6"
alloy-primitives = "0.8.7"
alloy-provider = "0.8.1"
alloy-rpc-types-eth = "0.8.1"
serde = "1.0.214"
base64 = "0.22.1"
rusqlite = { version = "0.25.3", features=["bundled"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"
bincode = "1.3.3"
futures-channel = "0.3.31"
reqwest = "0.12.9"
chrono = "0.4.39"
cbor = "0.4.1"
sha2 = "0.10.8"
[features]
default = []
bls_signing = [
    "signer-eigen",
]
nitro_attestation = []
