[package]
name = "setup-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-signer-local = { version = "0.5.3", default-features = false }
eigen-common = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "f9d6cb687584fac0a547cfc5df5bbccc91c3769a" }
eigen-client-elcontracts = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "f9d6cb687584fac0a547cfc5df5bbccc91c3769a" }
eigen-testing-utils = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "f9d6cb687584fac0a547cfc5df5bbccc91c3769a" }
eigen-client-avsregistry = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "f9d6cb687584fac0a547cfc5df5bbccc91c3769a" }
eigen-logging = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "f9d6cb687584fac0a547cfc5df5bbccc91c3769a" }
eigen-crypto-bls = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "f9d6cb687584fac0a547cfc5df5bbccc91c3769a" }
eigen-utils = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "f9d6cb687584fac0a547cfc5df5bbccc91c3769a" }

alloy-primitives = "0.8.23"
alloy-sol-types = "0.8.23"
alloy-json-rpc = "0.12.6"
alloy-contract = "0.12.6"

tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }

anyhow = "1.0.97"

clap = { version = "4.3.10", features = ["derive", "env", "string"] }
serde_json = "1.0.133"
serde = "1.0.219"