[package]
name = "setup-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-signer-local = { version = "0.13.0", default-features = false }
eigen-common = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "dcba03cedc9af91fb982538c31ac9463134ef5e9" }
eigen-client-elcontracts = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "dcba03cedc9af91fb982538c31ac9463134ef5e9" }
eigen-testing-utils = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "dcba03cedc9af91fb982538c31ac9463134ef5e9" }
eigen-client-avsregistry = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "dcba03cedc9af91fb982538c31ac9463134ef5e9" }
eigen-logging = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "dcba03cedc9af91fb982538c31ac9463134ef5e9" }
eigen-crypto-bls = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "dcba03cedc9af91fb982538c31ac9463134ef5e9" }
eigen-utils = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "dcba03cedc9af91fb982538c31ac9463134ef5e9" }

alloy-primitives = "0.8.23"
alloy-sol-types = "0.8.23"
alloy-json-rpc = "0.13.0"
alloy-contract = "0.13.0"
alloy-provider = "0.13.0"
alloy-rpc-types = "0.13.0"

tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }

anyhow = "1.0.97"

clap = { version = "4.3.10", features = ["derive", "env", "string"] }
serde_json = "1.0.133"
serde = "1.0.219"
url = "2.5.4"